fix(MenuLayout): show scroll bar when overflow

--- a/components/MenuLayout/MenuLayout.less
+++ b/components/MenuLayout/MenuLayout.less
@@ -13,3 +13,7 @@
 .layout-footer {
   text-align: center;
 }
+
+.layout-card {
+  overflow: auto;
+}
